--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   }
   
-  html,body,#root {
-    background-color: #efefef;
-    height: 100%;
+  html, #root {
+  height: 100%;
+    
   }
+
+  
