features: criação branch thiago, atualização do idioma do html para pt-br, alterações no breadcrumb, página depoimentos comentada

--- a/src/componentes/navbar/Navbar.module.css
+++ b/src/componentes/navbar/Navbar.module.css
@@ -12,7 +12,8 @@
 .list {
     display: flex;
     list-style: none;
-    text-decoration: none;    
+    text-decoration: none;  
+    margin-right: 10em;  
 }
 
 .item {
@@ -33,6 +34,6 @@
 }
 
 .logo {
-    margin-left: 40px; 
+    margin-left: 5em; 
 }
 
