--- a/src/componentes/botao/Button.module.css
+++ b/src/componentes/botao/Button.module.css
@@ -8,10 +8,12 @@
     cursor: pointer;
     color: #fff;
     font-weight: bold;
-    
+    border: none;
 }
 
-.button:hover {
-    background-color: #de9a11ac;
-}
-
+@media (hover:hover) and (pointer: fine) {
+    .button:hover {
+        background-color: #de9a11ac;
+ 
+    }
+}   
