--- a/src/componentes/navbar/Navbar.module.css
+++ b/src/componentes/navbar/Navbar.module.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 18%;
     background-color: black;
-    padding: 1em;
+    /*padding: 1em;*/
     align-items: center;
     justify-content: space-between;
     max-width: 100%;
