--- a/src/componentes/botao/Button.module.css
+++ b/src/componentes/botao/Button.module.css
@@ -3,12 +3,14 @@
     height: 50px;
     width: 120px;
     border-radius: 5px;
-    
-    margin-top: 2em;
+    margin-left: 108px;  
+    margin-top: 20px;
     cursor: pointer;
     color: #fff;
     font-weight: bold;
     border: none;
+       
+    
 }
 
 @media (hover:hover) and (pointer: fine) {
