--- a/src/componentes/breadcrumb/Breadcrumb.module.css
+++ b/src/componentes/breadcrumb/Breadcrumb.module.css
@@ -1,22 +1,25 @@
 .crumb a {
     font-family: "Roboto";
     max-width: 100%;
-    margin-left: 7em;
+    margin-left: 3px;
     color:#000;
     font-weight: 400;
 }
 
-.crumb >*{
-    display: inline-block;
-    margin-right: 10px;
-}
 
-.crumb:after{
+.crumb:after {
     content: '>';
     margin-left: 10px;
-}
+    margin-right: 5px;
+    
+    
+  }
 
-.crumb:last-child:after{
-    display: none;
-}
+  .crumb:last-child:after {
+    content: none;
+    
+  }
+
+
+
 
