--- a/src/componentes/footer/footer.module.css
+++ b/src/componentes/footer/footer.module.css
@@ -12,7 +12,10 @@
     list-style: none;
     text-decoration: none;  
     margin-right: 10em; 
-    text-align: right; 
+    justify-content: right;
+    position: relative;
+    bottom: 10em;
+    right: 3.5em;
 }
 
 .item {
@@ -29,5 +32,35 @@
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-style: normal;
+    font-size: 20px;
      
+}
+
+.informacoes {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    color: #fff;
+    font-size: 20px;
+    text-align: right;
+    margin-right: 9.1em;
+    padding-bottom: 5px;
+    position: relative;
+    bottom: 8em;
+    right: 3em;
+}
+
+.contato {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    color: #fff;
+    font-size: 20px;
+    text-align: center;
+    justify-content: left;
+    margin-right: 9.1em;
+    padding-bottom: 5px;
+    position: relative;
+    bottom: 2.5em;
+    right: 3em;
 }
