--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,20 @@
     
   }
 
+  .breadcrumb {
+    display: flex;
+    max-width: 1200px;
+    margin-left: 130px;
+    color:#000;
+    font-weight: 400;
+    
+}
+
+
+
+
+
+
+  
+
   
