--- a/src/componentes/footer/footer.module.css
+++ b/src/componentes/footer/footer.module.css
@@ -51,13 +51,14 @@
 }
 
 .contato {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-style: normal;
     color: #fff;
     font-size: 20px;
-    text-align: center;
-    justify-content: left;
     margin-right: 9.1em;
     padding-bottom: 5px;
     position: relative;
