feature: implementação carrossel de imagens depoimentos

--- a/src/pages/depoimentos/Depoimentos.module.css
+++ b/src/pages/depoimentos/Depoimentos.module.css
@@ -15,16 +15,19 @@
     font-size: 40px;
 }
 
-.card {
+.carrossel img {
+    width: 50%;
     position: relative;
-    left: 10em;
+    left: 25%;
     
 }
 
 
+
+
 .parceiros {
     display: flex;
-    margin-left: 12em;
+    margin-left: 17%;
     min-width: 1024px;
     padding: 3em;
 }
