--- a/src/componentes/speciePageComponent/speciePage.module.css
+++ b/src/componentes/speciePageComponent/speciePage.module.css
@@ -14,29 +14,30 @@
 .contentItem {
     margin: 15px;
     flex: 1;
+
   }
   
 .animalImage {
     max-width: 100%; /* Garante que a imagem não ultrapasse a largura do contêiner */
     height: auto; /* Mantém a proporção da imagem */
     min-width: 300px; /* Define o tamanho mínimo da largura da imagem */
-    padding: 10%;
+    padding: 3%;
   }
 
 
 .tittle{
     font-family: "Poppins", sans-serif;
-    font-size: clamp(30px,2.5vw,80px);
+    font-size: clamp(20px,3vw,80px);
     text-transform: uppercase;
     margin-bottom: 2%;
     text-align: center;
   }
 
 .firstTittle{
+  margin-left: 10%;
   font-family: "Poppins", sans-serif;
-  font-size: clamp(30px,2.5vw,80px);
+  font-size: clamp(20px,2.7vw,80px);
   text-transform: uppercase;
-  margin-bottom: 4%;
   }
 
 .youNeedToKnow h2{
@@ -46,7 +47,11 @@
 .text {
     font-family: 'Roboto', sans-serif;
     margin-top: 20px; /* Adiciona espaço entre o título e o texto */
-    font-size: clamp(16px, 1.4vw, 50px);
+    margin-left: 10%;
+    margin-right: 10%;
+
+    font-size: clamp(14px, 1.6vw, 50px);
+    text-align: left ;
     
   }
 
@@ -58,12 +63,15 @@
   
   .characteristics img {
     width: 50px; /* Ajuste conforme necessário */
-    height: auto;
-    margin-right: 10px; /* Espaçamento entre a imagem e o texto */
+    height: 50px;
+    margin-right: 10px; /* Espaçamento entre a imagem e o texto */  
+    border: 1px solid #ebebeb;
+
   }
   
   .characteristics .text {
     flex: 1; /* Para que o texto ocupe todo o espaço disponível */
+    
   }
   
 
@@ -112,7 +120,6 @@
 
 .curiosities{
   margin-top: 4%;
-  margin-bottom: 4%;
   padding-top: 4%;
   background-color: black;
 }
@@ -144,16 +151,13 @@
   margin-top: 5%;
   margin-bottom: 5%;
   padding: 5%;
-
-
-  
 }
+
 .curiosityTittle{
   color: white;
   font-family: "Poppins", sans-serif;
   font-size: clamp(15px,1.3vw,40px);
-  text-transform: uppercase;
-
+  text-transform: capitalize;
 }
 
 .curiosityText {
@@ -165,20 +169,61 @@
   font-size: clamp(16px, 1.4vw, 50px);
 }
 
-  @media screen and (max-width: 600px) {
-    .mainContainer{
-      align-items: center;
+@media screen and (max-width: 600px) {
+  .mainContainer{
+    align-items: center;
 
-    }
-    .contentItem {
-      margin: 10px;
-    }
-    .introduction {
-      flex-direction: column; /* Altera a direção do flex para empilhar verticalmente */
-    }
-  
-    .text, .tittle {
-      text-align: center; /* Centraliza o texto */
-      margin-top: 10px; /* Adiciona espaço entre a imagem e o texto */
-    }
   }
+  .contentItem {
+    margin: 10px;
+  }
+  .content {
+    flex-direction: column; /* Altera a direção do flex para empilhar verticalmente */
+  }
+
+
+  .firstTittle {
+    text-align: center;
+  }
+  .text {
+    margin-left: 5%;
+    margin-right: 5%;
+
+  }
+
+  .blackRetangle{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 5%;
+    border-radius: 75px;
+    overflow: hidden;
+  } 
+  .curiosityTittle{
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: clamp(14px,1vw,40px);
+    text-transform: capitalize;
+  }
+
+  .curiosityTittleBox{
+    background: #664300;
+    border-radius: 50px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding: 5%;
+  }
+  .curiosityText {
+    color: white;
+    margin-top: 10px; /* Adiciona espaço entre o título e o texto */
+    margin: 10%;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 20px; /* Adiciona espaço entre o título e o texto */
+    font-size: clamp(12px, 1vw, 50px);
+    text-align: left;
+  }
+}
