feat, style: Adicionei animações nos botões do home, navbar e footer, consertei algumas inconsistências, ainda falta fazer o midia query para adaptar a dispositivos mobile, de resto está responsivo.

--- a/src/componentes/footer/footer.module.css
+++ b/src/componentes/footer/footer.module.css
@@ -8,7 +8,8 @@
   }
   
   .logo {
-    width: clamp(50px, 10vw, 120px); 
+    width: clamp(50px, 10vw, 120px);
+    margin-left: 5%;
     margin-bottom:20%;
   }
   
@@ -46,3 +47,12 @@
   }
   
   
+  .listItem, .logo{
+    transition: transform 0.3s ease;
+    
+  }
+
+  .listItem:hover, .logo:hover{
+    transform: scale(1.2);
+    opacity: 0.8;
+  }
