--- a/src/componentes/botao/Button.module.css
+++ b/src/componentes/botao/Button.module.css
@@ -1,17 +1,22 @@
 .button {
     background-color: #664400;
-    height: 50px;
-    width: 120px;
+    height: 3vw;
+    width: 15vw;
     border-radius: 5px;
-    margin-left: 9.5em;
-    margin-top: 2em;
+    margin-left: 9%;
+    margin-top: 2%;
     cursor: pointer;
     color: #fff;
     font-weight: bold;
     border: none;
+    transition: transform 0.3s ease;
+    transform-origin: center center;
+    font-size: 1vw;
+    text-transform: uppercase;
 }
-@media (hover:hover) and (pointer: fine){
-    .button:hover {
-        background-color: #de9a11ac;
- }
+
+.button:hover {
+    transform: scale(1.1);
+    opacity: 0.8;
+
 }
