--- a/src/componentes/footer/footer.module.css
+++ b/src/componentes/footer/footer.module.css
@@ -1,5 +1,5 @@
 /* Container principal */
-.conteiner {
+.container {
     background-color: #000;
     padding: 10px;
     display: flex;
@@ -13,7 +13,7 @@
     margin-bottom:20%;
   }
   
-  .conteinerItem {
+  .containerItem {
     flex: 1 1 33.33%; /* Cada item ocupa um terço da largura */
     margin-top: 5%;
   }
