--- a/src/pages/animais/Animais.module.css
+++ b/src/pages/animais/Animais.module.css
@@ -5,13 +5,12 @@
 }
 
 .category {
-  width: calc(25% - 10px); /* 25% do espaço menos 10px de margem entre os componentes */
-  margin-bottom: 20px; /* Espaçamento inferior entre os componentes */
+  width: calc(25% - 10px); 
+  margin-bottom: 20px; 
 }
 
-/* Novo estilo para garantir que todas as imagens tenham o mesmo tamanho */
 .category img {
-  width: 100%; /* Ajusta a largura da imagem para 100% do contêiner */
-  height: auto; /* Mantém a proporção da imagem */
-  object-fit: cover; /* Garante que a imagem cobre todo o contêiner, cortando se necessário */
+  width: 100%; 
+  height: auto; 
+  object-fit: cover; 
 }
