feat, fix: corrigido alguns bugs no home, adicionado responsividade para mobile nas pag Home e Animais

--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,9 @@
   .breadcrumb {
     display: flex;
     max-width: 1200px;
-    margin-left: 130px;
+    margin-left: 10%;
     color:#000;
     font-weight: 400;
-    
 }
 
 .heading {
