--- a/src/componentes/botao/Button.module.css
+++ b/src/componentes/botao/Button.module.css
@@ -20,3 +20,14 @@
     opacity: 0.8;
 
 }
+
+@media screen and (max-width:600px) {
+    .button{
+        height: 7vw;
+        width: 36vw;
+        border-radius:5px;
+        margin-left: 9%;
+        margin-top: 2%;
+        font-size: 3vw;
+    }
+}
