--- a/src/componentes/questionsQuiz/QuestionsQuiz.module.css
+++ b/src/componentes/questionsQuiz/QuestionsQuiz.module.css
@@ -15,34 +15,35 @@
   font-family: 'Roboto', sans-serif;
   font-size: 32px;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
 }
 
 .spaceQuestionsQuiz button {
   margin: 0 auto;
   margin-bottom: 20px;
   cursor: pointer;
-  width: 240px;
+  width: 165px;
   height: 50px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.3s ease;
   padding: 10px 20px;
   border-radius: 5px;
   background-color: #664400;
   color: white;
   border: none;
   font-size: 16px;
-  width: 165px;
-
 }
 
-.button:hover {
+.button:hover, .hovered {
   background-color: #A66E00;
-  color: white;
+  transform: scale(1.1);
 }
 
-.button.hovered {
-  background-color: #A66E00;
-  color: white;
+.titleQuiz img {
+  transition: transform 0.3s ease;
+}
+
+.imgHovered {
+  transform: scale(1.1);
 }
 
 .questionsQuiz {
