fix: ajuste responsividade na tela do iphone 14 pro max

--- a/src/componentes/tiposQuiz/Quiz.module.css
+++ b/src/componentes/tiposQuiz/Quiz.module.css
@@ -37,7 +37,16 @@
   padding: 1rem;
 }
 
+
+
 @media (max-width: 600px) {
+  .quizImg {
+    width: 100%;  
+    max-width: 549px; 
+    padding-right: 30%;
+    margin-left: 5%;
+  }
+
   .text {
     padding-right: 10px;
   }
