--- a/src/componentes/tiposQuiz/Quiz.module.css
+++ b/src/componentes/tiposQuiz/Quiz.module.css
@@ -2,21 +2,28 @@
   padding-left: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
-  width: 549px;
-  transition: box-shadow 0.3s ease;
+  width: 40vw;
   cursor: pointer;
+  transition: transform 0.3s ease;
 }
 
+.quizImg:hover {
+  transform: scale(1.1);
+}
 
 .text {
-  padding-right: 200px;
+  padding-right: 10vw;
   cursor: pointer;
 }
 
 .text h1,
 .text p,
 .text button {
-  margin-top: 20px;
+  margin-top: 1vw;
+}
+
+.text button {
+  margin-left: 0vw;
 }
 
 .text p {
@@ -29,7 +36,6 @@
   font-family: 'Roboto', sans-serif;
 }
 
-
 .nQuizContainer {
   display: flex;
   align-items: center;
@@ -37,22 +43,34 @@
   padding: 1rem;
 }
 
-
-
 @media (max-width: 600px) {
   .quizImg {
     width: 100%;  
-    max-width: 549px; 
-    padding-right: 30%;
-    margin-left: 5%;
+    max-width:40vw; 
+    padding: 20px 30% 20px 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+  }
+
+  .quizImg button {
+    width: 80%; 
+    padding: 10px;
+    font-size: 1.2em; 
   }
 
   .text {
     padding-right: 10px;
+    text-align: center; 
+  }
+
+  .text button {
+    display: block; 
+    margin: 0 auto; 
   }
 
   .nQuizContainer {
     flex-direction: column;
+    align-items: center;
   }
 }
-
