--- a/src/componentes/footer/footer.module.css
+++ b/src/componentes/footer/footer.module.css
@@ -8,9 +8,8 @@
   }
   
   .logo {
-    width: clamp(50px, 10vw, 120px);
-    margin-left: 5%;
-    margin-bottom:20%;
+    width: clamp(300px, 15vw, 15000px); 
+    margin-top: -10%;
   }
   
   .containerItem {
