--- a/src/pages/quiz/resolucao/Resolucao.module.css
+++ b/src/pages/quiz/resolucao/Resolucao.module.css
@@ -1,6 +1,6 @@
 .configModal {
-  width: 40vw; 
-  max-width: 600px; 
+  width: 40vw;
+  max-width: 600px;
   background-color: black;
   color: white;
   position: fixed;
@@ -10,25 +10,52 @@
   padding: 20px;
   display: flex;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   flex-direction: column;
+  border-radius: 10px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .configModal {
-    width: 80vw; 
-    height: auto; 
+    width: 80vw;
+    padding: 20px;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .modalContent {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .modalImage {
+    margin-bottom: 20px;
+    margin-right: 0;
+    width: 50%; 
+  }
+
+  .modalText {
+    width: 100%;
+  }
+}
+
+@media (max-width: 800px) {
+  .modalContent {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 }
 
 .modalContent {
   display: flex;
   align-items: center;
-  flex-grow: 1; 
+  flex-grow: 1;
 }
 
 .modalImage {
   margin-right: 20px;
+  width: 50%;
 }
 
 .modalText {
@@ -37,27 +64,33 @@
   justify-content: center;
   align-items: center;
   font-family: 'Roboto';
-  gap: 10px; 
+  gap: 10px;
 }
 
 .modalText h2 {
-  font-size: 20px; 
+  font-size: 20px;
 }
 
 .modalText p {
-  font-size: 40px; 
+  font-size: 40px;
 }
 
 .modalButton {
   color: black;
   border: none;
-  padding: 5px 10px;
+  padding: 10px;
   border-radius: 5px;
   cursor: pointer;
   position: absolute;
   top: 10px;
   right: 10px;
+  z-index: 10; 
+  height: 2vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 
 .modalButton:hover {
   background-color: gray;
